tests/tooling/fixtures/native/recovery/negative/negative_return_annotation_unsupported_type.objc3
// Negative fixture: unsupported function return annotation type.
// Expected diagnostic code(s): O3P114.
module NegativeReturnAnnotationUnsupportedType;

fn main() -> token {
  return 0;
}
